# EveKahunaSystem

./: .gitignore  README.md  config.toml.example  docker-compose.yml  filter.py  init_neo4j.py  pyproject.toml  requirements.txt  run_server.py  run_server.sh  test2.py  update_sde.py
script/: debian.sources  install_dep_deb.sh
src/backend/: api_asset.py  api_login.py  app.py  user.py
src/event/: price.py
src/resource/templates/: test.html
src/service/config_server/: config.py  toml_config.py
src/service/industry_server/: industry_advice.py  industry_config.py  industry_utils.py
src/service/log_server/: kahuna_logger.py
src/service/market_server/: marker.py  market_manager.py  price.py
src/service/user_server/: user.py  user_manager.py
src_v2/backend/: app.py  auth.py
src_v2/backend/api/: __init__.py  api_EVE.py  api_asset.py  api_invite_code.py  api_login.py  api_permission.py  api_user.py  api_vip.py  permission_required.py
src_v2/core/: auth_utils.py
src_v2/core/config/: config.py  toml_config.py
src_v2/core/database/: connect_manager.py  kahuna_database_utils.py  kahuna_database_utils_v2.py  model.py  neo4j_examples.py  neo4j_model_manager.py  neo4j_models.py  neo4j_utils.py
src_v2/core/permission/: permission_manager.py
src_v2/core/picture_render/: downloader.py  picture_render.py
src_v2/core/user/: user.py  user_manager.py
src_v2/core/utils/: __init__.py  path.py
src_v2/frontend/: README.md  components.d.ts  package-lock.json  package.json  vite.config.ts
src_v2/frontend/src/: App.vue  (+2 more)
tests/: conftest.py  test_connect_manager.py
(+110 files in other folders)
